--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@ logs/
 bin/
 obj/
 
+# Database files
+*.db
+*.db-shm
+*.db-wal
+*.sqlite
+*.sqlite3
+
 # Configuration files with sensitive data
 appsettings.json
 appsettings.*.json
